# tensorscaling

./: CONTRIBUTORS  LICENSE  Makefile  README.md  TODO.txt  config.json  please  pyproject.toml  requirements.txt  spectral_gap.py  tensorscaling-cole.ipynb  tensorscaling-rafael.ipynb  tensorscaling.ipynb  tensorscaling.py  tensorscaling_code.textClipping  test_polytopes.py  test_symmetric.py  test_tensorscaling.py
.ipynb_checkpoints/: tensorscaling-checkpoint.ipynb  tensorscaling-cole-checkpoint.ipynb  tensorscaling-rafael-checkpoint.ipynb
src/: tensorscaling.ipynb
tests/: conftest.py
